<?xml version="1.0"?>
<package format="2">
  <name>rsj_custom_launchers</name>
  <version>0.0.0</version>
  <description>The rsj_custom_launchers package</description>
  <maintainer email="5770105+KMiyawaki@users.noreply.github.com">Kenzaburo Miyawaki</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
